--- a/react/global.css
+++ b/react/global.css
@@ -14,6 +14,8 @@
 
 .vtex-sellerselector-0-x-simulateShipping .vtex-button {
   border-radius: 2px;
-  border-top-left-radius: 0;
-  border-bottom-left-radius: 0;
+  width: auto;
+  height: 3.8rem;
+  margin-left: 0.875rem;
+  margin-top: 0.875rem;
 }
