Loading status on form submit during shipping quotation

--- a/react/global.css
+++ b/react/global.css
@@ -19,3 +19,8 @@
   margin-left: 0.875rem;
   margin-top: 0.875rem;
 }
+
+.spinnerContainer{      
+  margin-left: 0.875rem;
+  margin-top: 1.5rem;
+}
